# CCC_APP

./: LICENSE  README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/dev/orbianta/calculate_color_change/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  color_change_calc.cpp
app/src/main/java/dev/orbianta/calculate_color_change/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/orbianta/calculate_color_change/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
